automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   <body>
      <div class="container">
 
+       <div class="row">
+         <div class="col-sm-12">
+           Navigation Bar
+         </div>
+         
+       </div>
+
      </div>
 
     <!-- Optional JavaScript -->
