automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
          <div class="col-sm-12">
            Navigation Bar
          </div>
-         
+       </div>
+
+       <div class="row">
+         <div class="col-sm-12">
+         </div>
        </div>
 
      </div>
