automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
          </div>
        </div>
 
+       <div class="row">
+         <div class="col-sm-8">
+           promo video
+         </div>
+
+         <div class="col-sm-4">
+           company news
+         </div>
+         
+       </div>
+
      </div>
 
     <!-- Optional JavaScript -->
