automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,13 +32,20 @@
 
        <div class="row">
          <div class="col-sm-8">
-           promo video
+           <figure>
+             <video controls>
+               <source src="videos/real-estate.mp4" type="video/mp4">
+               <source src="videos/real-estate.ogv" type="video/ogg">
+               Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
+             </video>
+             <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
+           </figure>
          </div>
 
          <div class="col-sm-4">
            company news
          </div>
-         
+
        </div>
 
      </div>
