--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
          </div>
 
          <div class="col-sm-4">
-           company news
+           <h3>Company News</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, inventore, vero, rerum ullam nihil sapiente tempora molestias quis ducimus ipsum laborum vel. Tempore perspiciatis ea error dignissimos libero recusandae explicabo.</p>
          </div>
 
        </div>
