--- a/index.html
+++ b/index.html
@@ -49,6 +49,40 @@
 
        </div>
 
+       <div class="row">
+         <div class="col-sm-4">
+           <h3>Contact</h3>
+           <p>
+             email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
+             phone: +1 710 555 1234
+           </p>
+           <h3>Correspondence</h3>
+           <address>
+             Exceptional Realty<br>
+             P.O. Box 5555<br>
+             Brooklyn, NY 11201
+           </address>
+         </div>
+         <div class="col-sm-4">
+           <h3>Links</h3>
+           <p>
+             <a href="#" target="_blank">Home Restoration</a><br>
+             <a href="#" target="_blank">Affordable Mortgages</a><br>
+             <a href="#" target="_blank">Professional Moving Crew</a>
+           </p>
+         </div>
+         <div class="col-sm-4">
+           <h3>Follow</h3>
+           <p>
+             <a href="#" target="_blank">YouTube</a><br>
+             <a href="#" target="_blank">Facebook</a><br>
+             <a href="#" target="_blank">Twitter</a>
+           </p>
+         </div>
+         
+       </div>
+
+
      </div>
 
     <!-- Optional JavaScript -->
