--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 
        </div>
 
+       <div class="row">
+         <div class="col-sm-12">
+           
+         </div>
+       </div>
+
 
      </div>
 
