automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
        <div class="row">
          <div class="col-sm-12">
-           
+           &copy; 2014 Exceptional Realty. All Rights Reserved.
          </div>
        </div>
 
