--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 
        <div class="row">
          <div class="col-sm-12">
-           &copy; 2014 Exceptional Realty. All Rights Reserved.
+           <footer>
+             &copy; 2014 Exceptional Realty. All Rights Reserved.
+           </footer>
          </div>
        </div>
 
